Refactored and added emdb-scheduler-service.